# timbre

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
.github/workflows/: build-changes.yml  build-package.yml  build-platform-cache.yml  build-platform-image.yml  build-platform.yml  docker.yml  posix.yml
conan2/: global.conf  remotes.json
conan2/profiles/: Linux.armv8.Debug  Linux.x86_64.Debug  MacOS-armv8-Debug  Macos.armv8.Debug  Ubuntu24.04-armv8-Debug
docker/: CMakeLists.txt  Dockerfile.base  Dockerfile.timbre-configure
docker/base/: Dockerfile
ext/: CMakeLists.txt
ext/absl/: CMakeLists.txt
ext/absl/20230802.1/: conanfile.py
ext/absl/20250127.1/: conanfile.py
ext/ada/: CMakeLists.txt
ext/ada/2.3.0/: conanfile.py
ext/antlr/: CMakeLists.txt
ext/antlr/4.13.2/: conanfile.py
ext/antlr/4.9.3/: conanfile.py
ext/apachearrow/: CMakeLists.txt
ext/apachearrow/16.0.0/: conanfile.py
ext/apachearrow/22.0.0/: conanfile.py
ext/benchmark/: CMakeLists.txt
ext/benchmark/1.6.1/: conanfile.py
ext/boost/: CMakeLists.txt
ext/boost/1.83.0/: conanfile.py
ext/boost/1.84.0/: conanfile.py
ext/boost/1.85.0/: conanfile.py
ext/boost/1.88.0/: conanfile.py
ext/capnproto/: CMakeLists.txt
ext/capnproto/1.2.0/: conanfile.py
ext/cares/: CMakeLists.txt
ext/cares/1.23.0/: conanfile.py
ext/cares/1.34.6/: conanfile.py
ext/cppterminal/: CMakeLists.txt
ext/cppterminal/20231011.1/: conanfile.py
ext/cppterminal/20250728.1/: conanfile.py
ext/croaring/: CMakeLists.txt
ext/croaring/1.1.5/: conanfile.py
ext/croaring/4.4.3/: conanfile.py
ext/curl/: CMakeLists.txt
ext/curl/8.15.0/: conanfile.py
ext/curl/8.5.0/: conanfile.py
ext/flatbuffers/: CMakeLists.txt
ext/flatbuffers/23.5.26/: conanfile.py
ext/flatbuffers/25.2.10/: conanfile.py
ext/fmt/: CMakeLists.txt
ext/fmt/12.0.0/: conanfile.py
ext/fmt/9.1.0/: conanfile.py
ext/gflags/: CMakeLists.txt
ext/gflags/2.2.1/: conanfile.py
ext/gflags/20251106.1/: conanfile.py
ext/grpc/: CMakeLists.txt
ext/grpc/1.59.3/: conanfile.py
ext/grpc/1.62.0/: conanfile.py
ext/grpc/1.74.1/: conanfile.py
ext/gtest/: CMakeLists.txt
ext/gtest/1.14.0/: conanfile.py
ext/gtest/1.17.0/: conanfile.py
ext/hdrhistogram/: CMakeLists.txt
ext/hdrhistogram/0.11.9/: conanfile.py
ext/hdrhistogram/0.9.6/: conanfile.py
ext/icu/: CMakeLists.txt
ext/icu/74.1/: conanfile.py
ext/icu/77.1/: conanfile.py
ext/jemalloc/: CMakeLists.txt
ext/jemalloc/5.3.0/: conanfile.py
ext/libedit/: CMakeLists.txt
ext/libedit/20180525.1/: conanfile.py
ext/libedit/20250104.1/: conanfile.py
ext/lief/: CMakeLists.txt
ext/lief/0.17.1/: conanfile.py
ext/lief/0.17.6/: conanfile.py
ext/mustache/: CMakeLists.txt
ext/mustache/20250614.1/: conanfile.py
ext/ncurses/: CMakeLists.txt
ext/ncurses/6.5/: conanfile.py
ext/nng/: CMakeLists.txt
ext/nng/2.0.0/: conanfile.py
ext/noise-c/: CMakeLists.txt
ext/noise-c/20231206.1/: conanfile.py
ext/openssl/: CMakeLists.txt
ext/openssl/3.2.0/: conanfile.py
ext/openssl/3.5.2/: conanfile.py
ext/protobuf/: CMakeLists.txt
ext/protobuf/25.1/: conanfile.py
ext/protobuf/25.3/: conanfile.py
ext/protobuf/32.0/: conanfile.py
ext/qt6base/: CMakeLists.txt
ext/qt6base/6.6.1/: conanfile.py
ext/rapidjson/: CMakeLists.txt
ext/rapidjson/20230820.1/: conanfile.py
ext/rapidjson/20250205.1/: conanfile.py
ext/rats/: CMakeLists.txt
ext/rats/0.3.1/: conanfile.py
ext/re2/: CMakeLists.txt
ext/re2/20210901.1/: conanfile.py
ext/rocksdb/: CMakeLists.txt
ext/rocksdb/10.4.2/: conanfile.py
ext/rocksdb/8.5.3/: conanfile.py
ext/sqlite/: CMakeLists.txt
ext/sqlite/3.49.2/: conanfile.py
ext/utfcpp/: CMakeLists.txt
ext/utfcpp/4.0.6/: conanfile.py
ext/uv/: CMakeLists.txt
ext/uv/1.44.1/: conanfile.py
ext/uv/1.51.0/: conanfile.py
meta/: description  url
scripts/: build_stage.py  determine_build_order.py  install_and_upload_package.py  promote_packages.py
tools/: determine_changes  install_and_upload_package  promote_packages
