
add_subdirectory(absl)
add_subdirectory(ada)
add_subdirectory(antlr)
add_subdirectory(apachearrow)
add_subdirectory(benchmark)
add_subdirectory(boost)
add_subdirectory(cares)
add_subdirectory(cppterminal)
add_subdirectory(croaring)
add_subdirectory(curl)
add_subdirectory(flatbuffers)
add_subdirectory(fmt)
add_subdirectory(gflags)
add_subdirectory(grpc)
add_subdirectory(gtest)
add_subdirectory(hdrhistogram)
add_subdirectory(icu)
add_subdirectory(jemalloc)
add_subdirectory(libedit)
add_subdirectory(openssl)
add_subdirectory(protobuf)
add_subdirectory(qt6base)
add_subdirectory(rapidjson)
add_subdirectory(re2)
add_subdirectory(rocksdb)
add_subdirectory(sqlite)
add_subdirectory(uv)
